# controllers/brandController.js
@@ -3,28 +3,28 @@ const Brands = require('../models/brandModel');
 // POST /brands
 exports.createBrand = async (req, res) => {
   /*
-     #swagger.tags = ['Brands']
-      #swagger.requestBody = {
-         required: true,
-         content: {
-           "application/json": {
-             schema: { $ref: "#/components/schemas/Brand" },
-             examples: {
-               ExampleRequest: {
-                 summary: "Sample Brand Creation",
-                 value: {
-                      "Name": "",
-                      "Country": "",
-                      "StartingDate": "",
-                      "Logo": "",
-                      "Headquarters": "",
-                      "Founders": "",
-                 }
-               }
-             }
+  #swagger.tags = ['Brands']
+  #swagger.requestBody = {
+    required: true,
+    content: {
+      "application/json": {
+        schema: { $ref: "#/components/schemas/Brand" },
+        examples: {
+          ExampleRequest: {
+            summary: "Sample Brand Creation",
+            value: {
+              "Name": "Test",
+              "Country": "USA",
+              "StartingDate": "0000",
+              "Logo": "iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxglj2+j3+I+m0+gBwzYvN/fBwHKE0DHxglj2+gAAAAABJRU5ErkJggg==",
+              "Headquarters": "Test",
+              "Founders": "Test & Test",
+            }
           }
         }
-     }
+      }
+    }
+  }
   */
   try {
     const brand = new Brands(req.body);
@@ -38,40 +38,53 @@ exports.createBrand = async (req, res) => {
 // PUT /brands
 exports.updateBrand = async (req, res) => {
   /*
-     #swagger.tags = ['Brands']
-    #swagger.requestBody = {
-         required: true,
-         content: {
-           "application/json": {
-             schema: { $ref: "#/components/schemas/Brand" },
+  #swagger.tags = ['Brands']
+  #swagger.requestBody = {
+      required: true,
+      content: {
+      "application/json": {
+        schema: { $ref: "#/components/schemas/Brand" },
+        examples: {
+          ExampleRequest: {
+            summary: "Sample Brand Update",
+            value: {
+              "Name": "Test",
+              "Country": "USA",
+              "StartingDate": "0000",
+              "Logo": "iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxglj2+j3+I+m0+gBwzYvN/fBwHKE0DHxglj2+gAAAAABJRU5ErkJggg==",
+              "Headquarters": "Test",
+              "Founders": "Test & Test",
+            }
           }
         }
-     }
-     #swagger.responses[200] = {
-       description: 'Brand updated successfully',
-       content: {
-         'application/json': {
-           schema: { $ref: '#/components/schemas/Brand' }
-         }
-       }
-     }
-     #swagger.responses[400] = {
-       description: 'Bad Request',
-       content: {
-         'application/json': {
-           schema: { $ref: '#/components/schemas/Error' }
-         }
-       }
-     }
-     #swagger.responses[404] = {
-       description: 'Brand not found',
-       content: {
-         'application/json': {
-           schema: { $ref: '#/components/schemas/Error' }
-         }
-       }
-     }
-  */
+      }
+    }
+  }
+  #swagger.responses[200] = {
+    description: 'Brand updated successfully',
+    content: {
+      'application/json': {
+      schema: { $ref: '#/components/schemas/Brand' }
+      }
+    }
+  }
+  #swagger.responses[400] = {
+    description: 'Bad Request',
+    content: {
+      'application/json': {
+      schema: { $ref: '#/components/schemas/Error' }
+      }
+    }
+  }
+  #swagger.responses[404] = {
+    description: 'Brand not found',
+    content: {
+      'application/json': {
+      schema: { $ref: '#/components/schemas/Error' }
+      }
+    }
+  }
+ */
   try {
     const brand = await Brands.findByIdAndUpdate(req.params.brandId, req.body, { new: true, runValidators: true });
     if (!brand) {
